@@ -1,7 +1,10 @@
 package se.edugrade.carrental.services;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import se.edugrade.carrental.entities.Car;
 import se.edugrade.carrental.repositories.CarRepository;
 import se.edugrade.carrental.vo.CarVO;
@@ -14,48 +17,47 @@ import static org.mockito.Mockito.*;
 
 // Hugo Ransvi
 
+@ExtendWith(MockitoExtension.class)
 public class CarServiceTest {
 
-    private CarRepository carRepository;
-    private CarService carService;
+    @Mock
+    CarRepository carRepository;
 
-    @BeforeEach
-    void setUp() {
-        carRepository = mock(CarRepository.class);
-        carService = new CarService(carRepository);
-    }
+    @InjectMocks
+    CarService carService;
 
     @Test
-    void testGetAvailableCars() {
-        Car car1 = new Car(400, "Toyota", "Corolla", "ABC123", Car.CarStatus.FREE);
-        Car car2 = new Car(200, "Mitsubishi", "Space Star", "DEF456", Car.CarStatus.BOOKED);
+    void getAvailableCars_returnsOnlyFreeCars() {
+        Car freeCar = new Car(400, "Volvo", "V70", "ABC123", Car.CarStatus.FREE);
+        Car bookedCar = new Car(800, "Toyota", "Supra MK3", "DEF456", Car.CarStatus.BOOKED);
+        when(carRepository.findAll()).thenReturn(Arrays.asList(freeCar, bookedCar));
 
-        when(carRepository.findAll()).thenReturn(Arrays.asList(car1, car2));
         List<Car> result = carService.getAvailableCars();
 
         assertEquals(1, result.size());
-        assertEquals("Toyota", result.get(0).getBrand());
+        assertEquals(Car.CarStatus.FREE, result.get(0).getStatus());
     }
 
     @Test
-    void testAddCar() {
-        Car car = new Car(600, "BMW", "M3", "GHI789", Car.CarStatus.FREE);
-        when(carRepository.save(car)).thenReturn(car);
-
-        Car saved = carService.addCar(car);
-        assertEquals(car, saved);
-    }
-
-    @Test
-    void testGetAllCarsPublic() {
-        Car car1 = new Car(300, "Volkswagen", "Golf", "ABC123", Car.CarStatus.FREE);
-        Car car2 = new Car( 400, "Ford", "Focus", "DEF456", Car.CarStatus.BOOKED);
-
-        when(carRepository.findAll()).thenReturn(List.of(car1, car2));
+    void getAllCarsPublic_onlyFreeCarsReturnedAsVO() {
+        Car freeCar = new Car(700, "Volvo", "XC60", "ABC123", Car.CarStatus.FREE);
+        Car bookedCar = new Car(650, "Toyota", "Camry", "DEF456", Car.CarStatus.BOOKED);
+        when(carRepository.findAll()).thenReturn(Arrays.asList(freeCar, bookedCar));
 
         List<CarVO> result = carService.getAllCarsPublic();
 
         assertEquals(1, result.size());
-        assertEquals("Volkswagen", result.get(0).getBrand());
+        assertEquals("Volvo", result.get(0).getBrand());
+    }
+
+    @Test
+    void addCar_saveCar() {
+        Car car = new Car(500, "Audi", "Q5", "ABC123", Car.CarStatus.FREE);
+        when(carRepository.save(car)).thenReturn(car);
+
+        Car saved = carService.addCar(car);
+
+        assertEquals("Audi", saved.getBrand());
+        verify(carRepository).save(car);
     }
 }
